syntax = "proto3";
package post;
option go_package="./dto";

message PostRequest {
  int64 id = 1;
}

message PostResponse {
  int64  userId = 1;
  int64 id = 2;
  string title = 3;
  string body = 4;
}
